# sector-based-regularization

./: CMakeLists.txt  README.md  main.cpp
